jvm/controls/src/main/resources/css/scrolling-waveform.css
/**
 * Copyright (C) 2020-2024 Wycliffe Associates
 *
 * This file is part of Orature.
 *
 * Orature is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Orature is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Orature.  If not, see <https://www.gnu.org/licenses/>.
 */
.scrolling-waveform-container {
    -fx-min-height: 200px;
    -fx-background-color: -wa-scrolling-waveform-background;
}

.scrolling-waveform-play-controls__btn--rounded {
    -fx-background-radius: 50%;
    -fx-border-radius: 50%;
    -fx-border-width: 1px;
}

.scrolling-waveform-play-controls__btn--rounded .ikonli-font-icon {
    -fx-fill: -wa-regular-text;
}

.scrolling-waveform-play-controls__add-marker-btn {
    -fx-pref-width: 60px;
    -fx-pref-height: 60px;
}

.scrolling-waveform-play-controls__add-marker-btn .ikonli-font-icon {
    -fx-icon-size: 24px;
    -fx-icon-color: black;
}

.scrolling-waveform-play-controls__add-marker-container {
    -fx-padding: 0 0 10px 0;
}

.scrolling-waveform__marker-track {
    -fx-background-color: -wa-marker-track-background;
    -fx-pref-height: 40px;
}

.scrolling-waveform-holder {
    -fx-background-color: -wa-scrolling-waveform-background;
}

.scrolling-waveform-holder--played {
    -fx-fill: -wa-played-audio-highlight;
}

.scrolling-waveform__playback-line {
    -fx-stroke: -wa-playback-line;
}

.scrolling-waveform-frame__image-container {
    -fx-padding: 80 0;
    -fx-background-color: white;
}

.scrolling-waveform-frame__top-track {
    -fx-pref-height: 40px;
    -fx-background-color: -wa-marker-track-background;
}

.scrolling-waveform-frame__center {
    -fx-background-color: -wa-scrolling-waveform-background;
}

.scrolling-waveform-frame__bottom-track {
    -fx-pref-height: 40px;
    -fx-background-color: -wa-marker-track-background;
    -fx-border-width: 1px;
    -fx-border-color: null null -wa-scrolling-waveform-track-border null;
}

.marker-placement-waveform .scrolling-waveform__highlight--primary {
    -fx-fill: -wa-marker-overlay-primary;
}

.marker-placement-waveform .scrolling-waveform__highlight--secondary {
    -fx-fill: -wa-marker-overlay-secondary;
}

.marker-waveform .scrolling-waveform__highlight--primary,
.marker-waveform .scrolling-waveform__highlight--secondary {
    -fx-fill: transparent;
    -fx-stroke: -wa-border-light;
    -fx-stroke-width: 1;
}

